@@ -190,6 +190,14 @@ Declarator
     name: "x"
 EOS
     check C::Declarator, <<EOS
+x : 2
+----
+Declarator
+    name: "x"
+    num_bits: IntLiteral
+        val: 2
+EOS
+    check C::Declarator, <<EOS
 *x(int argc, char **argv)
 ----
 Declarator
@@ -206,7 +214,8 @@ Declarator
                 name: "argv"
     name: "x"
 EOS
-    assert_raise(C::ParseError){C::Declarator.parse('f; int f;')}
+    assert_raise(C::ParseError){C::Declarator.parse('i;}; struct {int i')}
+    assert_raise(C::ParseError){C::Declarator.parse('i; int j')}
     assert_raise(C::ParseError){C::Declarator.parse('i,j')}
     assert_raise(C::ParseError){C::Declarator.parse(';')}
     assert_raise(C::ParseError){C::Declarator.parse('')}
